// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoCarousel renders correctly for lg breakpoint 1`] = `
<RCTScrollView
  data={
    Array [
      "http://placeimg.com/640/480",
      "http://placeimg.com/640/480",
      "http://placeimg.com/640/480",
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={true}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Array [
              Object {
                "marginTop": 24,
              },
              Object {
                "marginBottom": 8.5,
                "marginLeft": 8.5,
                "marginRight": 8.5,
                "marginTop": 8.5,
              },
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderBottomLeftRadius": 9,
                  "borderBottomRightRadius": 9,
                  "borderTopLeftRadius": 9,
                  "borderTopRightRadius": 9,
                },
                Object {
                  "width": 83,
                },
                Object {
                  "height": 83,
                },
              ],
            ]
          }
          testID="ObsEdit.photo"
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Array [
                Array [
                  Object {
                    "height": "100%",
                  },
                  Object {
                    "display": "flex",
                  },
                  Object {
                    "alignItems": "center",
                  },
                  Object {
                    "justifyContent": "center",
                  },
                ],
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "http://placeimg.com/640/480",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": "100%",
                    "width": undefined,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Array [
              Object {
                "marginTop": 24,
              },
              Object {
                "marginBottom": 8.5,
                "marginLeft": 8.5,
                "marginRight": 8.5,
                "marginTop": 8.5,
              },
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderBottomLeftRadius": 9,
                  "borderBottomRightRadius": 9,
                  "borderTopLeftRadius": 9,
                  "borderTopRightRadius": 9,
                },
                Object {
                  "width": 83,
                },
                Object {
                  "height": 83,
                },
              ],
            ]
          }
          testID="ObsEdit.photo"
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Array [
                Array [
                  Object {
                    "height": "100%",
                  },
                  Object {
                    "display": "flex",
                  },
                  Object {
                    "alignItems": "center",
                  },
                  Object {
                    "justifyContent": "center",
                  },
                ],
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "http://placeimg.com/640/480",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": "100%",
                    "width": undefined,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Array [
              Object {
                "marginTop": 24,
              },
              Object {
                "marginBottom": 8.5,
                "marginLeft": 8.5,
                "marginRight": 8.5,
                "marginTop": 8.5,
              },
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderBottomLeftRadius": 9,
                  "borderBottomRightRadius": 9,
                  "borderTopLeftRadius": 9,
                  "borderTopRightRadius": 9,
                },
                Object {
                  "width": 83,
                },
                Object {
                  "height": 83,
                },
              ],
            ]
          }
          testID="ObsEdit.photo"
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Array [
                Array [
                  Object {
                    "height": "100%",
                  },
                  Object {
                    "display": "flex",
                  },
                  Object {
                    "alignItems": "center",
                  },
                  Object {
                    "justifyContent": "center",
                  },
                ],
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "http://placeimg.com/640/480",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": "100%",
                    "width": undefined,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`PhotoCarousel renders correctly for sm breakpoint 1`] = `
<RCTScrollView
  data={
    Array [
      "http://placeimg.com/640/480",
      "http://placeimg.com/640/480",
      "http://placeimg.com/640/480",
    ]
  }
  getItem={[Function]}
  getItemCount={[Function]}
  horizontal={true}
  keyExtractor={[Function]}
  onContentSizeChange={[Function]}
  onLayout={[Function]}
  onMomentumScrollBegin={[Function]}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  onScrollBeginDrag={[Function]}
  onScrollEndDrag={[Function]}
  removeClippedSubviews={false}
  renderItem={[Function]}
  scrollEventThrottle={50}
  stickyHeaderIndices={Array []}
  viewabilityConfigCallbackPairs={Array []}
>
  <View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Array [
              Object {
                "marginTop": 24,
              },
              Object {
                "marginBottom": 3,
                "marginLeft": 3,
                "marginRight": 3,
                "marginTop": 3,
              },
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderBottomLeftRadius": 4,
                  "borderBottomRightRadius": 4,
                  "borderTopLeftRadius": 4,
                  "borderTopRightRadius": 4,
                },
                Object {
                  "width": 42,
                },
                Object {
                  "height": 42,
                },
              ],
            ]
          }
          testID="ObsEdit.photo"
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Array [
                Array [
                  Object {
                    "height": "100%",
                  },
                  Object {
                    "display": "flex",
                  },
                  Object {
                    "alignItems": "center",
                  },
                  Object {
                    "justifyContent": "center",
                  },
                ],
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "http://placeimg.com/640/480",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": "100%",
                    "width": undefined,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Array [
              Object {
                "marginTop": 24,
              },
              Object {
                "marginBottom": 3,
                "marginLeft": 3,
                "marginRight": 3,
                "marginTop": 3,
              },
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderBottomLeftRadius": 4,
                  "borderBottomRightRadius": 4,
                  "borderTopLeftRadius": 4,
                  "borderTopRightRadius": 4,
                },
                Object {
                  "width": 42,
                },
                Object {
                  "height": 42,
                },
              ],
            ]
          }
          testID="ObsEdit.photo"
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Array [
                Array [
                  Object {
                    "height": "100%",
                  },
                  Object {
                    "display": "flex",
                  },
                  Object {
                    "alignItems": "center",
                  },
                  Object {
                    "justifyContent": "center",
                  },
                ],
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "http://placeimg.com/640/480",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": "100%",
                    "width": undefined,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "flexDirection": "row",
          },
          null,
        ]
      }
    >
      <View
        accessibilityRole="button"
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Array [
              Object {
                "marginTop": 24,
              },
              Object {
                "marginBottom": 3,
                "marginLeft": 3,
                "marginRight": 3,
                "marginTop": 3,
              },
            ],
          ]
        }
      >
        <View
          style={
            Array [
              Array [
                Object {
                  "overflow": "hidden",
                },
                Object {
                  "borderBottomLeftRadius": 4,
                  "borderBottomRightRadius": 4,
                  "borderTopLeftRadius": 4,
                  "borderTopRightRadius": 4,
                },
                Object {
                  "width": 42,
                },
                Object {
                  "height": 42,
                },
              ],
            ]
          }
          testID="ObsEdit.photo"
        >
          <View
            accessibilityIgnoresInvertColors={true}
            style={
              Array [
                Array [
                  Object {
                    "height": "100%",
                  },
                  Object {
                    "display": "flex",
                  },
                  Object {
                    "alignItems": "center",
                  },
                  Object {
                    "justifyContent": "center",
                  },
                ],
              ]
            }
          >
            <Image
              source={
                Object {
                  "uri": "http://placeimg.com/640/480",
                }
              }
              style={
                Array [
                  Object {
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                    "top": 0,
                  },
                  Object {
                    "height": "100%",
                    "width": undefined,
                  },
                  undefined,
                ]
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;